--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Joaquin Hernandez",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.2"
   }
 }
