--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "vercel": "^33.6.1"
   }
 }
